# group-activity-bot-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: chat_server.rs  db.rs  handler.rs  main.rs
